--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/tobiasraab/iks_backend#readme",
   "dependencies": {
     "express": "^4.17.2",
+    "serialport": "^9.2.8",
     "socket.io": "^4.4.0"
   }
 }
